<resources>
    <string name="app_name">TotalSNS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">로그인하기</string>
    <string name="title_activity_timeline">게시물 목록</string>
    <string name="title_activity_intro">인트로</string>
    <string name="app_name_intro">Total SNS</string>
    <string name="sign_out">로그아웃</string>
    <string name="setting">설정</string>
    <string name="nearby_artilce">주변 글보기</string>
    <string name="sign_in_instagram">인스타그램에 로그인</string>
    <string name="sign_in_twitter">트위터에 로그인</string>
    <string name="sign_in_facebook">페이스북에 로그인</string>
    <string name="title_activity_accounts">SNS 계정 선택</string>
    <string name="title_twitter">트위터</string>
    <string name="title_facebook">페이스북</string>
    <string name="title_instagram">인스타그램</string>
    <string name="account_new">새로운 계정 등록하기</string>
    <string name="upload_test_message">upload test message</string>
    <string name="title_timeline">글목록</string>
    <string name="title_search">검색</string>
    <string name="title_my_post">멘션</string>
    <string name="title_direct">쪽지</string>
    <string name="title_edit">SNS 항목편집</string>
    <string name="title_selected">선택항목</string>
    <string name="title_all">모두</string>
    <string name="addition_func">부가기능</string>
    <string name="title_timeline_detail">글 자세히 보기</string>
    <string name="title_following">팔로잉</string>
    <string name="title_follower">팔로워</string>
    <string name="title_write_timeline">글쓰기</string>
    <string name="write_hint">글을 작성해주세요</string>

    <string name="tran_profile_image">profileImage</string>
    <string name="tran_user_name">userName</string>
    <string name="tran_user_id">userId</string>
    <string name="tran_created_at">createdAt</string>
    <string name="tran_message">message</string>
    <string name="tran_image_container">imageContainer</string>

    <string name="tran_profile_image_u">imageTransition</string>
    <string name="tran_user_name_u">nameTransition</string>
    <string name="tran_user_id_u">idTransition</string>
    <string name="tran_message_u">msgTransition</string>
    <string name="tran_follow_btn">btnTransition</string>
    <string name="tran_profile_back">backTransition</string>

    <string name="finish_message">%d초가 지나기 전에 한 번 더 누르시면 종료됩니다.</string>
    <string name="message_write_hint">쪽지 작성하기</string>
    <string name="more_user">유저 더보기</string>
    <string name="title_dm_send">쪽지를 작성할 유저를 검색하세요</string>
    <string name="nearby_more_search">검색 결과 추가</string>
    <string name="nearby_new_search">새로운 검색 시작</string>
    <string name="title_activity_settings">TotalSNS 설정</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_theme_change">테마 변경</string>
    <string-array name="pref_theme_titles">
        <item>라이트 테마</item>
        <item>다크 테마</item>
        <item>시스템 설정값</item>
    </string-array>
    <string-array name="pref_theme_values">
        <item>light</item>
        <item>dark</item>
        <item>default</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="do_follow">팔로우하기</string>
    <string name="wait_follow">승인대기중</string>
    <string name="title_following_list">%s의 팔로잉 리스트</string>
    <string name="title_follower_list">%s의 팔로워 리스트</string>
    <string name="title_search_user_list">%s로 검색된 유저</string>
    <string name="title_message_detail">%s의 쪽지</string>
    <string name="title_profile">%s의 프로필</string>
    <string name="title_dm_send_to">받는이 선택</string>
    <string name="map">google mapview</string>
    <string name="unable_to_use">낮은 버전과 플레이 스토어에서 인증관련 설치 미지원으로 사용할 수 없습니다.</string>
    <string name="title_activity_image">이미지 보기</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="gps_permission_warning">퍼미션을 허용하지 않으면 내 위치를 사용할수 없습니다.</string>
    <string name="search">검색</string>
    <string name="pref_header_themel">테마</string>
</resources>