<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="UnusedAttribute">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/batang_white"
        android:foreground="?attr/selectableItemBackground"
        android:padding="8dp"
        tools:context=".ContentsActivity">

        <ImageView
            android:id="@+id/fProfileImg"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:transitionName="@string/tran_profile_image_u"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_account_circle_black_48dp" />

        <Button
            android:id="@+id/fFollowBtn"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@drawable/rounded_btn"
            android:paddingHorizontal="16dp"
            android:text="@string/title_following"
            android:textColor="@color/batang_white"
            android:textSize="16sp"
            android:transitionName="@string/tran_follow_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fUserName"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:minWidth="30dp"
            android:textColor="@color/black_overlay"
            android:textStyle="bold"
            android:transitionName="@string/tran_user_name_u"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@+id/fFollowBtn"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@+id/fProfileImg"
            app:layout_constraintTop_toTopOf="@+id/fProfileImg"
            tools:hint="이름이다" />

        <TextView
            android:id="@+id/fUserId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/colorPrimary"
            android:transitionName="@string/tran_user_id_u"
            app:layout_constraintStart_toStartOf="@+id/fUserName"
            app:layout_constraintTop_toBottomOf="@+id/fUserName"
            tools:text="'@userid'" />

        <TextView
            android:id="@+id/fMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clickable="false"
            android:duplicateParentState="true"
            android:focusable="false"
            android:maxLines="2"
            android:textColor="@color/text_black"
            android:transitionName="@string/tran_message_u"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/fProfileImg"
            app:layout_constraintTop_toBottomOf="@+id/fUserId"
            tools:text="사용자가 작성한 트윗이 이곳에 보여진다." />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>