<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="UnusedAttribute">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp">

        <ImageView
            android:id="@+id/item_user_profile_back"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:transitionName="@string/tran_profile_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <ImageView
            android:id="@+id/item_user_profile"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:scaleType="centerCrop"
            android:transitionName="@string/tran_profile_image_u"
            app:layout_constraintBottom_toBottomOf="@+id/item_user_profile_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_user_profile_back"
            app:srcCompat="@drawable/ic_account" />

        <Button
            android:textColor="@color/icon_tint"
            android:id="@+id/item_user_follow_btn"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_btn"
            android:paddingHorizontal="16dp"
            android:text="@string/do_follow"
            android:textSize="16sp"
            android:transitionName="@string/tran_follow_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_user_profile_back" />

        <TextView
            android:id="@+id/item_user_screen_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textSize="12sp"
            android:transitionName="@string/tran_user_id_u"
            app:layout_constraintStart_toStartOf="@+id/item_user_profile"
            app:layout_constraintTop_toBottomOf="@+id/item_user_profile"
            tools:text="userid" />

        <TextView
            android:id="@+id/item_user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:lines="1"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textSize="12sp"
            android:transitionName="@string/tran_user_name_u"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/item_user_screen_id"
            app:layout_constraintTop_toBottomOf="@+id/item_user_screen_id"
            tools:text="이름이다이름이다이름이다이름이다이름이다이름이다이름이다이름이다이름이다이름이다" />

        <TextView
            android:id="@+id/item_user_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textSize="12sp"
            android:transitionName="@string/tran_message_u"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/item_user_screen_id"
            app:layout_constraintTop_toBottomOf="@+id/item_user_name"
            tools:text="트위터 유저의 프로필입니다." />

        <TextView
            android:id="@+id/profile_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/item_user_message"
            app:layout_constraintTop_toBottomOf="@+id/item_user_message"
            tools:text="대한민국 성남시" />

        <TextView
            android:id="@+id/profile_created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintStart_toEndOf="@+id/profile_address"
            app:layout_constraintTop_toTopOf="@+id/profile_address"
            tools:text="2010년 5월 5일" />

        <TextView
            android:id="@+id/profile_following_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/title_following"
            app:layout_constraintStart_toStartOf="@+id/profile_address"
            app:layout_constraintTop_toBottomOf="@+id/profile_address" />

        <TextView
            android:id="@+id/profile_following_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintStart_toEndOf="@+id/profile_following_label"
            app:layout_constraintTop_toTopOf="@+id/profile_following_label"
            tools:text="33" />

        <TextView
            android:id="@+id/profile_follower_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/title_follower"
            app:layout_constraintStart_toEndOf="@+id/profile_following_num"
            app:layout_constraintTop_toTopOf="@+id/profile_following_label" />

        <TextView
            android:id="@+id/profile_follower_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintStart_toEndOf="@+id/profile_follower_label"
            app:layout_constraintTop_toTopOf="@+id/profile_following_label"
            tools:text="10" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>