<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="UnusedAttribute">

    <androidx.cardview.widget.CardView
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="8dp"
        android:foreground="?attr/selectableItemBackground"
        android:padding="16dp"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/item_user_profile_back"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:scaleType="centerCrop"
                android:transitionName="@string/tran_profile_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <ImageView
                android:id="@+id/item_user_profile"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:scaleType="centerCrop"
                android:transitionName="@string/tran_profile_image_u"
                app:layout_constraintBottom_toBottomOf="@+id/item_user_profile_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_user_profile_back"
                app:srcCompat="@drawable/ic_account_circle_black_48dp" />

            <Button
                android:textColor="@color/icon_tint"
                android:id="@+id/item_user_follow_btn"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/rounded_btn"
                android:paddingHorizontal="16dp"
                android:text="팔로우"
                android:textSize="16sp"
                android:transitionName="@string/tran_follow_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_user_profile_back" />

            <TextView
                android:id="@+id/item_user_screen_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="12sp"
                android:transitionName="@string/tran_user_id_u"
                app:layout_constraintStart_toStartOf="@+id/item_user_profile"
                app:layout_constraintTop_toBottomOf="@+id/item_user_profile"
                tools:text="userid" />

            <TextView
                android:id="@+id/item_user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:lines="1"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="12sp"
                android:transitionName="@string/tran_user_name_u"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/item_user_screen_id"
                app:layout_constraintTop_toBottomOf="@+id/item_user_screen_id"
                tools:text="이름이다이름이다이름이다이름이다이름이다이름이다" />

            <TextView
                android:id="@+id/item_user_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:ellipsize="end"
                android:lines="2"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="12sp"
                android:transitionName="@string/tran_message_u"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/item_user_screen_id"
                app:layout_constraintTop_toBottomOf="@+id/item_user_name"
                tools:text="트위터 유저의 프로필입니다. 최대 두 줄까지만 표시가 되고 그 이상으로 넘어가면 말줄임 표로 표시가 됩니다." />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>