<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="UnusedAttribute">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/batang_white"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        tools:context=".ContentsActivity">

        <ImageView
            android:id="@+id/mProfileImg"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:transitionName="@string/tran_profile_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:srcCompat="@drawable/ic_account_circle_black_48dp" />

        <TextView
            android:id="@+id/mUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:ellipsize="end"
            android:maxWidth="150dp"
            android:maxLines="1"
            android:minWidth="30dp"
            android:textColor="@color/black_overlay"
            android:textSize="16sp"
            android:textStyle="bold"
            android:transitionName="@string/tran_user_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/mUserId"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/mProfileImg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:hint="이름이름이름이름이름이름이름이다" />

        <!--* app:layout_constraintHorizontal_chainStyle="packed" CHAIN IT for biasing-->
        <TextView
            android:id="@+id/mUserId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:transitionName="@string/tran_user_id"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/mTime"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/mUserName"
            app:layout_constraintTop_toTopOf="@+id/mUserName"
            app:layout_constraintVertical_bias="0.0"
            tools:text="'@userid'" />

        <TextView
            android:id="@+id/mTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:textColor="@color/text_pink"
            android:textSize="12sp"
            android:transitionName="@string/tran_created_at"
            app:layout_constraintBaseline_toBaselineOf="@+id/mUserName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/mUserId"
            app:layout_constraintTop_toTopOf="@+id/mUserName"
            app:layout_constraintVertical_bias="0.0"
            tools:text="2017년 6월 21일" />

        <com.enos.totalsns.util.autolink.AutoLinkTextView
            android:id="@+id/mMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:clickable="false"
            android:duplicateParentState="true"
            android:focusable="false"
            android:maxLines="2"
            android:textColor="@color/text_black"
            android:textSize="16sp"
            android:transitionName="@string/tran_message"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/mProfileImg"
            app:layout_constraintTop_toBottomOf="@+id/mUserName"
            app:layout_constraintVertical_bias="0.0"
            tools:text="다이렉트 메세지는 유저간 비공개 대화를 하는 기능이다." />

    </android.support.constraint.ConstraintLayout>
</layout>